--- a/assets/ css/style.css
+++ b/assets/ css/style.css
@@ -12,7 +12,7 @@
 }
 body{
    font-family: 'montserrat', sans-serif;
-   font-size: 18px;
+   font-size: 1rem;
    background-color: black;
    color:white;
    width: 100% !important;
@@ -116,6 +116,7 @@ header nav ul li a:hover{
     }
     .section1-css img{
         margin-top: 10px;
+        height: 300px;
 
     }
     }
