--- a/assets/ css/style.css
+++ b/assets/ css/style.css
@@ -28,6 +28,7 @@ header{
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex; 
+    position: absolute;
     z-index: 100;
     background:rgba(50, 50, 150, 0.23);
     top:0; 
@@ -58,7 +59,6 @@ header nav ul li  a{
     color:white !important;
 }
 header nav ul li a:hover{
-    transform: scale(1.2);
     transition: ease-in-out 0.2s ;
     color:darkgoldenrod !important;
 }
@@ -69,15 +69,16 @@ header nav ul li a:hover{
     margin-top: 200px;
     background: rgba(50, 50, 150, 0.23);
     padding:30px;
+    width: 100%;
 }
 .section1-css  img{
     height: 520px;
 }
 .except{
-    font-size: 43px;
+    font-size: 23px;
     font-weight: 400;
     font-family: 'open sans', sans-serif;
-    padding-top: 92px;
+    padding-top: 170px;
 }
 .section2-css{
     margin-top: 100px;
@@ -97,11 +98,10 @@ header nav ul li a:hover{
     font-weight: bold;
 }
 .text{
-    padding: 40px;
+    padding: 20px;
     font-size: 30px;
     font-weight: 400;
     font-family: 'open sans', serif;
-   justify-content: space-around;
 }
 @media screen and (max-width:769px){
     .except{
@@ -155,6 +155,17 @@ header nav ul li a:hover{
     .except{
         padding-top: 10px;
         font-size: 39px;
+    }
+}
+
+@media screen and (max-width:500px){
+    .section1-css img{
+        width: 100%;
+        height: 300px;
+    }
+    .except{
+        padding-top: 10px;
+        font-size: 25px;
     }
 }
 
