--- a/assets/ css/style.css
+++ b/assets/ css/style.css
@@ -1,137 +1,148 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Redressed&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* For all */
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --color-text: black;
-    --haeder-color:#eee;
+    --haeder-color: #eee;
 }
 
-body{
-   font-family: 'montserrat', sans-serif;
-   font-size: 1rem;
-   background-color: black;
-   color:white;
-   width: 100% !important;
+body {
+    font-family: 'montserrat', sans-serif;
+    font-size: 1rem;
+    background-color: black;
+    color: white;
+    width: 100% !important;
 }
 
-li{
+li {
     list-style-type: none;
 }
 
-li a{
+li a {
     text-decoration: none;
-    color:white;
+    color: white;
 }
 
 
-p{
+p {
     font-size: calc(1.5rem);
 }
 
 /* =======================Menu================= */
-header{
+header {
     padding-top: 20px;
     padding-bottom: 20px;
-    display: flex; 
+    display: flex;
     position: absolute;
     z-index: 100;
-    background:rgba(50, 50, 150, 0.23);
-    top:0; 
+    background: rgba(50, 50, 150, 0.23);
+    top: 0;
     width: 100%;
 }
 
 
-.logo{
+.logo {
     font-size: 30px;
-    color:darkred;
+    color: darkred;
     text-transform: capitalize;
-    font-weight: bold;  
+    font-weight: bold;
 }
 
-.menu{
+.menu {
     display: flex;
     position: relative;
 }
 
-header nav ul{
+header nav ul {
     display: flex;
     position: relative;
 }
 
-header nav ul li  a{
-    color:white !important;
+header nav ul li a {
+    color: white !important;
 }
-header nav ul li a:hover{
-    transition: ease-in-out 0.2s ;
-    color:darkgoldenrod !important;
+
+header nav ul li a:hover {
+    transition: ease-in-out 0.2s;
+    color: darkgoldenrod !important;
 }
-.active{
+
+.active {
     color: darkred !important;
 }
 
 /*==================fisrt section===========*/
 
-.section1-css{
+.section1-css {
     margin-top: 200px;
-    padding:30px;
+    padding: 30px;
     width: 100%;
 }
 
 
-.except{
+.except {
     font-weight: 400;
     font-family: 'open sans', sans-serif;
     padding-top: 170px;
 }
-.section2-css{
+
+.section2-css {
     margin-top: 100px;
     margin-bottom: 50px;
 }
-.section2-css .part1{
+
+.section2-css .part1 {
     margin-bottom: 50px;
 }
-.heading{
+
+.heading {
     color: darkgoldenrod;
     font-size: 40px;
     text-align: center;
 }
-.except span{
+
+.except span {
     font-size: 30px;
     color: darkred;
     font-weight: bold;
 }
-.text{
+
+.text {
     padding: 20px;
     font-family: 'open sans', serif;
     text-align: justify;
 }
-@media screen and (max-width:769px){
-    .except{
+
+@media screen and (max-width:769px) {
+    .except {
         font-size: 35px;
         font-weight: 400;
         font-family: 'open sans', sans-serif;
         padding-top: 19px;
     }
-  
-    .section1-css{
+
+    .section1-css {
         margin-top: 180px;
     }
-    .section1-css img{
+
+    .section1-css img {
         margin-top: 10px;
         height: 300px;
 
     }
+}
+
+@media screen and (min-width:766px) and (max-width:769px) {
+    .section1-css img {
+        width: 300px;
     }
-@media screen and (min-width:766px) and (max-width:769px){
-    .section1-css img{
-        width:300px;
-    }
+
     .except {
         font-size: 35px;
         font-weight: 400;
@@ -139,11 +150,13 @@ header nav ul li a:hover{
         padding-top: 100px;
     }
 }
-@media screen and (min-width:818px) and(max-width:820px){
-    .section1-css img{
-       width: 300px;
-        border-radius: 40px;  
+
+@media screen and (min-width:818px) and(max-width:820px) {
+    .section1-css img {
+        width: 300px;
+        border-radius: 40px;
     }
+
     .except {
         font-size: 1.5rem;
         font-weight: 400;
@@ -152,26 +165,30 @@ header nav ul li a:hover{
 
     }
 }
-@media screen and (min-width:910px) and (max-width:912px){
 
-    header nav ul li a{
+@media screen and (min-width:910px) and (max-width:912px) {
+
+    header nav ul li a {
         font-size: 30px !important;
     }
-    .section1-css img{
-        width:400px;
+
+    .section1-css img {
+        width: 400px;
     }
-    .except{
+
+    .except {
         padding-top: 10px;
         font-size: 39px;
     }
 }
 
-@media screen and (max-width:500px){
-    .section1-css img{
+@media screen and (max-width:500px) {
+    .section1-css img {
         width: 100%;
         height: 300px;
     }
-    .except{
+
+    .except {
         padding-top: 10px;
         font-size: 1.5rem;
     }
@@ -179,110 +196,153 @@ header nav ul li a:hover{
 
 /* =======section 3 css=====*/
 
-.section3-css .heading{
+.section3-css .heading {
     padding-bottom: 40px;
 }
-.section3-css h3{
+
+.section3-css h3 {
     border-left: 1px darkred solid;
     padding-left: 15px;
 }
 
 .box {
-    padding:30px;
+    padding: 30px;
 }
 
 
 /* =======section 4 css=====*/
-.section4-css{
+.section4-css {
     padding-top: 50px;
     padding-bottom: 50px;
 }
-.section4-css .content{
+
+.section4-css .content {
     font-size: 50px;
     color: darkslategrey;
-    padding-bottom: 50px;  
-    animation: content infinite 2s; 
+    padding-bottom: 50px;
+    animation: content infinite 2s;
 }
+
 @keyframes content {
-    0%{
-        transform:translateX(0);
+    0% {
+        transform: translateX(0);
     }
-    50%{
-        
-        color:red;
+
+    50% {
+
+        color: red;
     }
-    100%{
-        transform:translateX(70px);
+
+    100% {
+        transform: translateX(70px);
     }
 }
 
-.together{
+.together {
     padding-top: 100px;
 }
 
-.section4-css form input{
+.section4-css form input {
     background-color: transparent !important;
     border-right: none !important;
     border-bottom-color: beige !important;
-    height:44px;
-    padding:30px;
-    color:white;
+    height: 44px;
+    padding: 30px;
+    color: white;
     border-top: none !important;
     border-left: none !important;
-    
+
 }
-.section4-css form input:hover{
-    border:none !important;
+
+.section4-css form input:hover {
+    border: none !important;
 }
-.section4-css form textarea{
+
+.section4-css form textarea {
     background-color: transparent !important;
-    margin-top:5px;
-    color:white;
+    margin-top: 5px;
+    color: white;
     height: 100px;
     padding-top: 20px;
-    padding-left:10px;
+    padding-left: 10px;
 }
-.btn-color{
+
+.btn-color {
     background-color: darkred;
     padding: 10px;
     border: none;
     border-radius: 5px;
 }
-.btn-color a{
+
+.btn-color a {
     text-decoration: none;
-    color:#eee;
+    color: #eee;
 }
-.footer-part{
-    padding: 50px;
-    margin-top: 77px;
-    line-height: 60px;
-}
-.footer{
-    margin-top:40px;
-    margin-bottom: 5px;
-    border-top: 1px #F5F5DC solid;
-    padding-top:30px;
-}
-.except i{
-    font-weight:bold ;
-    font-size: 30px;
-}
-.bg-darkest{
-    color:darkred
-}
-.content{
+
+.content {
     position: relative;
-    transition: 2s  ease-in-out;
+    transition: 2s ease-in-out;
 }
-content:hover{
-    transform:translateX(-150px);
+
+content:hover {
+    transform: translateX(-150px);
 }
-.justify-content-space-around{
+
+.justify-content-space-around {
     justify-content: space-around !important;
 }
-.justify-content-center{
+
+.justify-content-center {
     text-align: center !important;
 }
-.justify-content-space-between{
+
+.justify-content-space-between {
     justify-content: space-between !important;
+}
+
+.footer {
+    margin-top: 40px;
+    padding: 30px 0;
+    border-top: 1px solid #F5F5DC;
+}
+
+.footer-part {
+    padding: 30px;
+    text-align: center;
+    line-height: 1.8;
+}
+
+.footer i {
+    font-size: 22px;
+    font-weight: bold;
+    color: darkred;
+}
+
+/* Petit effet sur le texte si tu veux */
+.logo {
+    font-weight: 700;
+    color: darkred;
+}
+
+/* ===== RESPONSIVE ===== */
+@media (max-width: 768px) {
+    .footer-part {
+        padding: 20px;
+        font-size: 15px;
+    }
+
+    .footer i {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer-part {
+        padding: 15px;
+        font-size: 14px;
+    }
+
+    .footer i {
+        font-size: 18px;
+    }
 }
