--- a/assets/ css/style.css
+++ b/assets/ css/style.css
@@ -39,7 +39,7 @@ header {
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
-    position: absolute;
+    position: fixed;
     z-index: 100;
     background: rgba(50, 50, 150, 0.23);
     top: 0;
@@ -119,7 +119,6 @@ header nav ul li a:hover {
 
 @media screen and (max-width:769px) {
     .except {
-        font-weight: 400;
         font-family: 'open sans', sans-serif;
         padding-top: 19px;
     }
@@ -130,7 +129,7 @@ header nav ul li a:hover {
 
     .section1-css img {
         margin-top: 10px;
-        height: 300px;
+        height: 35rem !important;
 
     }
 }
@@ -180,7 +179,7 @@ header nav ul li a:hover {
 @media screen and (max-width:500px) {
     .section1-css img {
         width: 100%;
-        height: 300px;
+        height: 100%;
     }
 
     .except {
@@ -270,6 +269,7 @@ header nav ul li a:hover {
     background-color: darkred;
     padding: 10px;
     border: none;
+    color:white;
     border-radius: 5px;
 }
 
