--- a/assets/ css/style.css
+++ b/assets/ css/style.css
@@ -117,10 +117,43 @@ header nav ul li a:hover {
     font-family: 'open sans', serif;
 }
 
-@media screen and (max-width:769px) {
+
+@media screen and (max-width:500px) {
+    p{
+        font-size:1rem ;
+    }
+    .section1-css img {
+        width: 100%;
+        height: 20rem;
+    }
+
+    .except {
+        padding-top: 10px;
+        font-size: 1rem;
+    }
+    .section4-css .content {
+        font-size: 2rem !important;
+        color: darkslategrey;
+        padding-bottom: 50px;
+        animation: content infinite 2s;
+    }
+
+    .logo {
+        font-size: 1.5rem;
+        color: darkred;
+        text-transform: capitalize;
+        font-weight: bold;
+    }
+}
+
+@media screen and (min-width:501px) and (max-width:672px) {
+    p{
+        font-size:1.2rem ;
+    }
     .except {
         font-family: 'open sans', sans-serif;
         padding-top: 19px;
+        font-size: 1.2rem;
     }
 
     .section1-css {
@@ -129,21 +162,27 @@ header nav ul li a:hover {
 
     .section1-css img {
         margin-top: 10px;
-        height: 35rem !important;
-
+        width:90% !important;
+        height: 30rem !important;
     }
+
 }
 
-@media screen and (min-width:766px) and (max-width:769px) {
+@media screen and (min-width:768px) and (max-width:1023px) {
+    p{
+        font-size:1.2rem;
+    }
     .section1-css img {
-        width: 300px;
+        width: 350px;
     }
 
     .except {
+        font-size: 1.5rem;
         font-weight: 400;
         font-family: 'open sans', sans-serif;
-        padding-top: 100px;
+        padding-top: 70px;
     }
+
 }
 
 @media screen and (min-width:818px) and(max-width:820px) {
@@ -176,17 +215,6 @@ header nav ul li a:hover {
     }
 }
 
-@media screen and (max-width:500px) {
-    .section1-css img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .except {
-        padding-top: 10px;
-        font-size: 1.5rem;
-    }
-}
 
 /* =======section 3 css=====*/
 
@@ -318,11 +346,6 @@ content:hover {
 }
 
 /* Petit effet sur le texte si tu veux */
-.logo {
-    font-weight: 700;
-    color: darkred;
-}
-
 /* ===== RESPONSIVE ===== */
 @media (max-width: 768px) {
     .footer-part {
